testsuite/tests/lexical_envs/invalid_subunit_root/non_root_list.lkt
import lexer_example

@with_lexer(foo_lexer)
grammar foo_grammar {
    @main_rule main_rule <- list+(Subunit("example" main_rule))
}

class FooNode implements Node[FooNode] {
}

@ple_unit_root class Subunit: FooNode {
    fields: ASTList[Subunit]
}
